docs: gst